--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hbs": "^4.2.0",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.5"
+    "mysql2": "^3.11.5",
+    "xlsx": "^0.18.5"
   }
 }
