--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-session-knex": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "got": "^14.4.5",
