--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": ""
+    "test": "echo \"Error: no tests\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
