--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no tests\" && exit 1",
-    "start": "node app.js"
+    "start": "node import.sql.js && node app.js"
   },
   "repository": {
     "type": "git",
